# poetry-docker

./: Dockerfile  README.md  pyproject.toml
poetry_docker/: main.py
tests/: test_main.py
