[tool.poetry]
name = "poetry-docker"
version = "0.1.0"
description = ""
authors = ["Mirosław Błażej <miro662@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_docker"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
